<resources>
    <string name="app_name">anahuac</string>
    <string name="hint_email_or_phone_number">Email or phone number</string>
    <string name="password">Password</string>
    <string name="btn_login">Log in</string>
    <string name="txt_need_help">Need Help?</string>
    <string name="txt_sign_up">Sign Up for Facebook</string>
    <string name="txt_title_practices">Prácticas</string>
    <string name="txt_anahuac_cancun">Universidad Anáhuac - Campus Cancún</string>
    <string name="txt_boton_ver_mas">Ver más</string>
    <string name="btn_alerta">Alerta</string>
    <string name="btn_alerta_with_button">Alerta con botones</string>
    <string name="btn_alert_with_options">Alerta con opciones</string>
    <string name="login_title">LOGIN</string>
    <string name="email">EMAIL</string>
    <string name="txt_forgot_password">Forgot password?</string>

    <string name="txt_sign_in_now">Sign In Now</string>
    <string name="txt_phone">Phone number or email</string>
    <string name="btn_signin">Sign in</string>
    <string name="my_name">Brian Andres Uscanga Sosa</string>
    <string name="my_email">brian.uscangaso@anahuac.mx</string>
    <string name="horario">Horario de clases</string>
    <string name="materias">Materias</string>
    <string name="calificaciones">Calificaciones</string>
    <string name="pago">Pago de colegiaturas</string>
</resources>