<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginTwoActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/home_button"
        android:elevation="8dp"
        android:tint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/cv_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/login_purple"
        app:layout_constraintBottom_toTopOf="@id/gl_50"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="11dp"
        app:layout_constraintTop_toTopOf="@id/gl_66"
        app:layout_constraintBottom_toTopOf="@id/gl_66">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:layout_margin="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="@dimen/font_size_title"
                android:textStyle="bold"
                android:gravity="center"
                android:hint="@string/login_title"/>

            <EditText
                android:layout_margin="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:hint="@string/email"
                android:background="@null"/>
            <EditText
                android:layout_marginHorizontal="@dimen/margin_secondary"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="my@email.com"
                android:background="@null"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/Line_height"
                android:layout_margin="@dimen/margin_default"
                android:background="@color/netflix_gray"/>
            <EditText
                android:layout_margin="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:hint="@string/password"
                android:background="@null"/>
            <EditText
                android:layout_marginHorizontal="@dimen/margin_secondary"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="................"
                android:background="@null"/>
            <View
                android:id="@+id/v_line"
                android:layout_width="match_parent"
                android:layout_height="@dimen/Line_height"
                android:layout_margin="@dimen/margin_default"
                android:background="@color/netflix_gray"/>
            <View
                android:id="@+id/v_white_line"
                android:layout_width="match_parent"
                android:layout_height="@dimen/Line_height"
                android:layout_margin="@dimen/margin_default"
                android:background="@color/white"/>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:padding="13dp"
        android:text="@string/btn_login"
        android:backgroundTint="@color/login_purple"
        android:textSize="@dimen/font_size_title"
        app:layout_constraintBottom_toTopOf="@id/forgot_password"
        app:layout_constraintStart_toStartOf="@id/cv_login"
        app:layout_constraintEnd_toEndOf="@id/cv_login"/>
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_forgot_password"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/cv_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>